--- a/index.html
+++ b/index.html
@@ -85,54 +85,48 @@
       </div>
     </section>
     <section class="products" id="productos">
-      <h2 class="title-bold text-center p-2">PRODUCTOS</h2>
+      <h2 class="title-bold text-center p-2 ">PRODUCTOS</h2>
       <div class="products-content text-center row">
         <div class="col-sm-6 col-md-4 col-lg-2 col-xl-2 product-content_card">
-          <div class="card-img">
-            <img src="img/atrapamugre.PNG" alt="" class="img-icon">
+          <div class="card-img card-img_atrapamugre">            
           </div>
           <p>Tapete Atrapamugre </p>
         </div>
-        <div class="col-sm-6 col-md-4 col-lg-2 col-xl-2 product-content_card">
+         <div class="col-sm-6 col-md-4 col-lg-2 col-xl-2 product-content_card">
           <a href="#desinfectante">
-          <div class="card-img">
-            <img src="img/tapete_desinfectante.PNG" alt="" class="img-icon">
+          <div class="card-img card-img_desinfectante">            
           </div>
           <p>Tapete desinfectante </p>
         </a>
         </div>
         <div class="col-sm-6 col-md-4 col-lg-2 col-xl-2 product-content_card">
           <a href="#publicitario">
-          <div class="card-img">
-            <img src="img/atrapamugre.PNG" alt="" class="img-icon">
+          <div class="card-img card-img_publicitario">           
           </div>
           <p>Tapete Publicitario </p>
         </a>
         </div>
         <div class="col-sm-6 col-md-4 col-lg-2 col-xl-2 product-content_card">
           <a href="#luminosos">
-          <div class="card-img">
-            <img src="img/luminosos.PNG" alt="" class="img-icon">
+          <div class="card-img card-img_luminosos">            
           </div>
           <p>Avisos luminosos </p>
         </a>
         </div>
         <div class="col-sm-6 col-md-4 col-lg-2 col-xl-2 product-content_card">
-          <div class="card-img">
-            <a href="#tarjetas">
-            <img src="img/tarjetas.PNG" alt="" class="img-icon">
-          </div>
+          <a href="#tarjetas">
+          <div class="card-img card-img_tarjetas">            
+            </div>
           <p>Tarjetas publicitarias </p>
         </a>
         </div>
         <div class="col-sm-6 col-md-4 col-lg-2 col-xl-2 product-content_card">
-          <div class="card-img">
-            <a href="#mugs">
-            <img src="img/mugs.PNG" alt="" class="img-icon">
+          <a href="#mugs">  
+          <div class="card-img card-img_mugs">                      
           </div>
           <p>Mugs personalizados </p>
         </a>
-        </div>
+        </div> 
       </div>
     </section>
     <!-- SECTION PRODUCTS -->
@@ -145,7 +139,7 @@
           </figure>
         </div>
         <div class="col-sm-12 col-md-12 col-lg-6 col-xl-6 product-info">
-          <h3 class="text-center animate__animated animate__fadeIn title-bold">TAPETE ATRAPAMUGRE</h3>
+          <h3 class="text-center animate__animated animate__fadeIn title-bold after">TAPETE ATRAPAMUGRE</h3>
           <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Id, explicabo amet. Porro amet inventore possimus dolorem aut beatae dolore totam quos! Vitae, sint! Porro, recusandae earum aliquam in alias dolores!Lorem ipsum dolor sit amet consectetur adipisicing elit. Id, explicabo amet. Porro amet inventore possimus dolorem aut beatae dolore totam quos! Vitae, sint! Porro, recusandae earum aliquam in alias dolores!</p>
         </div>
       </div>
@@ -158,7 +152,7 @@
           </figure>
         </div>
         <div class="col-sm-12 col-md-12 col-lg-6 col-xl-6 product-info">
-          <h3 class="text-center animate__animated animate__fadeIn title-bold" id="desinfectante">TAPETE DESINFECTANTE</h3>
+          <h3 class="text-center animate__animated animate__fadeIn title-bold after" id="desinfectante">TAPETE DESINFECTANTE</h3>
           <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Id, explicabo amet. Porro amet inventore possimus dolorem aut beatae dolore totam quos! Vitae, sint! Porro, recusandae earum aliquam in alias dolores!Lorem ipsum dolor sit amet consectetur adipisicing elit. Id, explicabo amet. Porro amet inventore possimus dolorem aut beatae dolore totam quos! Vitae, sint! Porro, recusandae earum aliquam in alias dolores!</p>
         </div>
       </div>
@@ -171,7 +165,7 @@
           </figure>
         </div>
         <div class="col-sm-12 col-md-12 col-lg-6 col-xl-6 product-info">
-          <h3 class="text-center animate__animated animate__fadeIn title-bold" id="publicitario">TAPETE PUBLICITARIO</h3>
+          <h3 class="text-center animate__animated animate__fadeIn title-bold after" id="publicitario ">TAPETE PUBLICITARIO</h3>
           <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Id, explicabo amet. Porro amet inventore possimus dolorem aut beatae dolore totam quos! Vitae, sint! Porro, recusandae earum aliquam in alias dolores!Lorem ipsum dolor sit amet consectetur adipisicing elit. Id, explicabo amet. Porro amet inventore possimus dolorem aut beatae dolore totam quos! Vitae, sint! Porro, recusandae earum aliquam in alias dolores!</p>
         </div>
       </div>
@@ -184,7 +178,7 @@
           </figure>
         </div>
         <div class="col-sm-12 col-md-12 col-lg-6 col-xl-6 product-info">
-          <h3 class="text-center animate__animated animate__fadeIn title-bold" id="luminosos">AVISOS LUMINOSOS</h3>
+          <h3 class="text-center animate__animated animate__fadeIn title-bold after" id="luminosos">AVISOS LUMINOSOS</h3>
           <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Id, explicabo amet. Porro amet inventore possimus dolorem aut beatae dolore totam quos! Vitae, sint! Porro, recusandae earum aliquam in alias dolores!Lorem ipsum dolor sit amet consectetur adipisicing elit. Id, explicabo amet. Porro amet inventore possimus dolorem aut beatae dolore totam quos! Vitae, sint! Porro, recusandae earum aliquam in alias dolores!</p>
         </div>
       </div>
@@ -197,7 +191,7 @@
           </figure>
         </div>
         <div class="col-sm-12 col-md-12 col-lg-6 col-xl-6 product-info">
-          <h3 class="text-center animate__animated animate__fadeIn title-bold" id="tarjetas">TARJETAS PUBLICITARIAS</h3>
+          <h3 class="text-center animate__animated animate__fadeIn title-bold after" id="tarjetas">TARJETAS PUBLICITARIAS</h3>
           <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Id, explicabo amet. Porro amet inventore possimus dolorem aut beatae dolore totam quos! Vitae, sint! Porro, recusandae earum aliquam in alias dolores!Lorem ipsum dolor sit amet consectetur adipisicing elit. Id, explicabo amet. Porro amet inventore possimus dolorem aut beatae dolore totam quos! Vitae, sint! Porro, recusandae earum aliquam in alias dolores!</p>
         </div>
       </div>
@@ -210,7 +204,7 @@
           </figure>
         </div>
         <div class="col-sm-12 col-md-12 col-lg-6 col-xl-6 product-info">
-          <h3 class="text-center animate__animated animate__fadeIn title-bold" id="mugs">MUGS PERSONALIZADOS</h3>
+          <h3 class="text-center animate__animated animate__fadeIn title-bold after" id="mugs">MUGS PERSONALIZADOS</h3>
           <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Id, explicabo amet. Porro amet inventore possimus dolorem aut beatae dolore totam quos! Vitae, sint! Porro, recusandae earum aliquam in alias dolores!Lorem ipsum dolor sit amet consectetur adipisicing elit. Id, explicabo amet. Porro amet inventore possimus dolorem aut beatae dolore totam quos! Vitae, sint! Porro, recusandae earum aliquam in alias dolores!</p>
         </div>
       </div>
